--- a/index.html
+++ b/index.html
@@ -8,21 +8,73 @@
     <link href="Style.css" rel="Stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="/Thailand-CPA/cpa.js"></script>
     <title>Thailand CPA Services</title>
 </head>
 
+<!--create container-->
+<div class="container-fluid">
+    <!--First row-->
+    <div class="row">
+        <!--First Column in first row-->
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <H2>THALAND CPA SERVICES</H2>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Business Registration Services</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Accounting Services
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Tax Management & Filing</a></li>
+                                <li><a class="dropdown-item" href="#">Bookkeeping</a></li>
+                                <li><a class="dropdown-item" href="#">Payroll Services</a></li>
+                                <li><a class="dropdown-item" href="#">Cash Management</a></li>
+                                <li><a class="dropdown-item" href="#">Issuance of Documents</a></li>
+                                <li><a class="dropdown-item" href="#">Auditing services</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <button id="ไทย" class="nav-link btn btn-link">ไทย</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
 
-<body>
+
+
+        <body>
 
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
+            <script src="app.js"></script>
+        </body>
 
 </html>
